TestRepo2/src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishment_Recap__c</fullName>
        <label>Accomplishment Recap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Grade__c</fullName>
        <label>Account Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Mode_Detail__c</fullName>
        <label>Assignment Mode Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Mode__c</fullName>
        <label>Assignment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for code only -- do not add to layouts</description>
        <label>Associate Parent</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Goals (Associate Parent)</relationshipLabel>
        <relationshipName>Associate_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Category</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Logo__c</fullName>
        <formula>Brand_Program__r.Link_to_Content__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Program</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Type</label>
        <referenceTo>BrandBottle_Size__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Actions_Completed__c</fullName>
        <formula>Program__r.Actions_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Actions Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Displayed__c</fullName>
        <label>Cases Displayed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NASW - Cascaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cascaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Link__c</fullName>
        <label>Marketing Materials</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dave_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dave Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <label>Feature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cocktail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shot List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Features_Displayed__c</fullName>
        <label>Features</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Account_Report_Item_Count__c</fullName>
        <label>Goal Account Report Item Count</label>
        <summaryForeignKey>Goal_Account_Report_Item__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goal_Brand_Report_Item_Count__c</fullName>
        <label>Goal Brand Report Item Count</label>
        <summaryForeignKey>Goal_Brand_Report_Item__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goal_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Length__c</fullName>
        <formula>Due_Date__c - Program__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Level__c</fullName>
        <label>Goal Level</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Name_Type__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp;  Text(Goal_Type__c)</formula>
        <label>Goal Name/Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <picklist>
            <picklistValues>
                <fullName>On-Premise - Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Premise - Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_of_Training__c</fullName>
        <inlineHelpText>Length of time in minutes that the training took place</inlineHelpText>
        <label>Length of Training</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Actions_Completed__c</fullName>
        <formula>IF (
TEXT(Priority__c) = &quot;Local&quot;, Action_Complete__c, 0)</formula>
        <label>Local - Actions Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Completed_MB__c</fullName>
        <formula>IF( 
AND( 
!ISBLANK( 
Action_Complete__c), 
Local_sub__c !=0), 
(Action_Complete__c/Local_sub__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local % Completed (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Local_Completed__c</fullName>
        <formula>IF( 
AND( 
!ISBLANK( 
Action_Complete__c), 
Local__c !=0), 
(Action_Complete__c/Local__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local % Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Local_Goals__c</fullName>
        <description>This field is used to store the sum of local goals for reporting.</description>
        <label>Local Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <formula>IF(Text(Priority__c) = &quot;Local&quot;, Minimum_of_Accounts__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_sub__c</fullName>
        <formula>IF(Text(Priority__c) = &quot;Local&quot;, 
(Minimum_of_Accounts__c * 
IF(Goal_Brand_Report_Item_Count__c &gt; 0, Goal_Brand_Report_Item_Count__c, 1) 
) 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local (Multi-Brand)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Grade__c</fullName>
        <inlineHelpText>A = Front end cap, main lobby, checkout
B = Back of store, isle display, mid end cap
C = Others</inlineHelpText>
        <label>Location Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Long_Name__c</fullName>
        <label>Long Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MGR_UPDATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MGR UPDATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_of_Accounts__c</fullName>
        <label>Goal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Actions_Completed__c</fullName>
        <formula>IF (
TEXT(Priority__c) = &quot;National&quot;, Action_Complete__c, 0)</formula>
        <label>National - Actions Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Completed_MB__c</fullName>
        <formula>IF(
	AND(
		!ISBLANK(
			Action_Complete__c),
			National_sub__c !=0),
			(Action_Complete__c/National_sub__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National % Completed (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>National_Completed__c</fullName>
        <formula>IF( 
AND( 
!ISBLANK( 
Action_Complete__c), 
National__c !=0), 
(Action_Complete__c/National__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National % Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>National_Goals__c</fullName>
        <description>This is used to calculate the sum of national goals for reporting.</description>
        <label>National Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <formula>IF(Text(Priority__c) = &quot;National&quot;, Minimum_of_Accounts__c,0)</formula>
        <label>National</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_sub__c</fullName>
        <formula>IF(Text(Priority__c) = &quot;National&quot;, 
(Minimum_of_Accounts__c * 
IF(Goal_Brand_Report_Item_Count__c &gt; 0, Goal_Brand_Report_Item_Count__c, 1) 
) 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National (Multi-Brand)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_ID_X_ref__c</fullName>
        <label>Objective ID-X-ref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Child Goals</relationshipLabel>
        <relationshipName>Child_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_of_Universe__c</fullName>
        <label>% of Universe</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premise_Activity_Type__c</fullName>
        <formula>IF
(Text(Goal_Type__c) = &quot;On-Premise - Control&quot;, 
&quot;On - &quot; &amp; RecordType.Name,
&quot;Off - &quot; &amp; RecordType.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise/Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Link_Count__c</fullName>
        <label>Product Link Count</label>
        <summaryForeignKey>Goal_Product_Link__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Sample_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Sample(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <formula>Program__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name_Type__c</fullName>
        <formula>Program__r.Name &amp; &quot; - &quot; &amp;  TEXT(Goal_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name/Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <formula>Program__r.Start_Date__c</formula>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFA_POS_Items__c</fullName>
        <label>SFA POS Items</label>
        <picklist>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Stacker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Tucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling Dangler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condiment Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contravision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corebuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gutter Mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapel Pins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Necker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Case Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennant String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Display Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pole Topper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premiums</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Integrated National Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display/Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shelf_Set_Criteria__c</fullName>
        <label>Shelf Set Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Ad__c</fullName>
        <label>Size of Ad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_Price__c</fullName>
        <inlineHelpText>The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.</inlineHelpText>
        <label>Suggested Retail Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tasted_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tasted Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <formula>TODAY()-32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Completed__c</fullName>
        <formula>Local_Actions_Completed__c +  National_Actions_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total - Actions Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Completed_MB__c</fullName>
        <formula>IF( 
AND( 
!ISBLANK( 
Action_Complete__c), 
National_sub__c !=0), 
(Action_Complete__c/(Local_sub__c+National_sub__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total % Completed (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Completed__c</fullName>
        <formula>Action_Complete__c/Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total % Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Multi_Brand__c</fullName>
        <formula>Local_sub__c +National_sub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Multi-Brand)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Local__c +  National__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for this Brand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <label>Trainer</label>
        <picklist>
            <picklistValues>
                <fullName>Diageo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep (me)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Ambassador</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_Audience__c</fullName>
        <label>Training Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Bartender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Employees</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Ad__c</fullName>
        <label>Type of Ad</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All_Goals4</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Goal_For__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Goals</label>
    </listViews>
    <listViews>
        <fullName>My_Goals2</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Minimum_of_Accounts__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Sales_Channel__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Goal_Level__c</columns>
        <columns>Completed__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Goals</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA00000024gW8MAI_00NA0000009YyJhMAK</fullName>
        <active>true</active>
        <field>Action__c.Goal__c</field>
        <filterItems>
            <field>Goal__c.Due_Date__c</field>
            <operation>greaterThan</operation>
            <valueField>Goal__c.Today_Date__c</valueField>
        </filterItems>
        <filterItems>
            <field>Goal__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Activity_Goal</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IA00000024hCtMAI_00NA0000009Z6ThMAK</fullName>
        <active>true</active>
        <field>Goal__c.Associate_Parent__c</field>
        <filterItems>
            <field>Goal__c.Goal_For__c</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <filterItems>
            <field>Goal__c.Completed__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Goal_Associate Parent</name>
        <sourceObject>Goal__c</sourceObject>
    </namedFilters>
    <pluralLabel>Goals</pluralLabel>
    <recordTypes>
        <fullName>Ad_Execution</fullName>
        <active>true</active>
        <label>Ad Execution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bar_Promotion_Goals</fullName>
        <active>true</active>
        <label>Bar Promotion Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cold_Box_Goals</fullName>
        <active>true</active>
        <label>Cold Box Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Display_Goals</fullName>
        <active>true</active>
        <label>Display Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Accts_Sold_Goals</fullName>
        <active>true</active>
        <label>Distribution (Accts Sold) Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_POD_Goals</fullName>
        <active>true</active>
        <label>Distribution (POD) Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ease_of_Shop</fullName>
        <active>true</active>
        <label>Ease of Shop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature</fullName>
        <active>true</active>
        <label>Feature Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Goals</fullName>
        <active>true</active>
        <label>General Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu</fullName>
        <active>true</active>
        <label>Menu Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Set_Goals</fullName>
        <active>true</active>
        <label>Shelf Set Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Training_Goals</fullName>
        <active>true</active>
        <label>Staff Training Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tasting_Goals</fullName>
        <active>true</active>
        <label>Tasting Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volume_Goals</fullName>
        <active>true</active>
        <label>Volume/QD Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Window_Display_Goals</fullName>
        <active>true</active>
        <label>Window Display Goals</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>